Update license template for scripts

--- a/license.template
+++ b/license.template
@@ -1,6 +1,7 @@
 MIT License
 
-Copyright (c) 2020 Mike Beaton
+[[PackageId]] version [[Version]], Copyright (c) 2020 Mike Beaton
+[[PackageProjectUrl]]
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
